# StrainRelief

./: .gitignore  .pre-commit-config.yaml  Dockerfile-strain-relief  MANIFEST.in  README.md  ci.yml  labintheloop.yaml  pyproject.toml  requirements-dev.in  requirements.in
.github/workflows/: ci.yml  pypi.yml
analysis/: analysis_charged.ipynb  analysis_electrostatic_collapse.ipynb  analysis_neutral.ipynb
data/: example_ligboundconf_input.parquet
examples/: example_config.yaml  example_script.sh  example_scripts.sh  examples.sh  mace_training_script.sh  tutorial.ipynb
examples/.ipynb_checkpoints/: tutorial-checkpoint.ipynb
hydra_config/: default.yaml  new_default.yaml
hydra_config/calculator/: fairchem.yaml  mace.yaml  mmff94.yaml
hydra_config/conformers/: default.yaml
hydra_config/experiment/: fairchem.yaml  mace.yaml  mmff94.yaml  pytest.yaml
hydra_config/io/: default.yaml
hydra_config/optimiser/: bfgs.yaml
scripts/: example_script.sh
src/prescient_strain_relief.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/strain_relief/: __init__.py  compute_strain.py
tests/: conftest.py  test_compute_strain.py  test_init.py
tests/cmdline/: test_strain_relief.py
tests/configs/: test_configs.py
tests/conformers/: test_rdkit_generation.py
tests/constants/: test_str.py  test_units.py
tests/data/: all_charged.parquet  ligboundconf.parquet  target.parquet
tests/deployment/: test_strain_relief.py
tests/energy_eval/: test_energy_eval.py  test_esen.py  test_mace.py  test_mmff94.py  test_nnp.py  test_uff.py
tests/io/: test_input.py  test_io.py  (+2 more)
(+78 files in other folders)
