[project]
name = "strain-relief"
description = "Calculates ligand strain of small molecules from their docked poses."
authors = [{name = "Ewan Wallace", email = "erw@wallace2.com"}]
license = "Apache-2.0"
dynamic = ["version"]
requires-python = "==3.11.*"
readme = {file = "README.md", content-type = "text/markdown"}
urls = {Homepage = "https://github.com/prescient-design/StrainRelief"}

dependencies = [
    "rdkit",
    "ase",
    "numpy",
    "pandas",
    "omegaconf",
    "hydra-core",
    "pyarrow",
    "fastparquet",
    "universal-pathlib",
    "boto3",
    "loguru",
    "rich",
    "neural-optimiser",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
    "ipykernel",
]

[project.scripts]
strain-relief = "strain_relief.cmdline:strain_relief"

[tool.uv.extra-build-dependencies]
torch-cluster = ["torch"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
local_scheme = "node-and-date"
search_parent_directories = true
version_scheme = "no-guess-dev"

[build-system]
requires = ["setuptools >= 65", "setuptools_scm[toml]>=6.2"]
build-backend = 'setuptools.build_meta'

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "UP", # pyupgrade
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
    "gpu: marks tests as needing a gpu (deselect with '-m \"not gpu\"')"
]
